test/visibility/import/enablesUnqualified/importAndImport3.good
importAndImport3.chpl:21: In function 'main':
importAndImport3.chpl:22: error: unresolved call 'foo()'
importAndImport3.chpl:22: note: because no functions named foo found in scope
